data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3144.wast
;; 3. **Test 3**: Implement a function containing a `br_if` instruction targeting a block label that has been removed or altered dynamically. Invoke the function and verify if the WebAssembly implementation raises an unknown label error, unlike the Wizard_engine, which could misinterpret the branching.

(assert_invalid
  (module
    (func $f (param i32))
    (block $l (br_if $l (i32.const 1)))
    (block (nop))
  )
  "unknown label"
)